♻️ Replaced GenericContainer with PostgreSQLContainer in source db resource